# Embeddings-Visualizer

./: README.md  app.py  embeddings.ipynb  pyproject.toml  questions.csv  requirements.txt
.github/workflows/: workflow.yaml
embeddings_visualizer/: app.py  embeddings.ipynb  main.py
