[tool.poetry]
name = "embeddings-visualizer"
version = "0.0.9"
description = ""
authors = ["markus <datamastery87@gmail.com>"]
readme = "README.md"
packages = [{include = "embeddings_visualizer"}]

[tool.poetry.scripts]
ev = "embeddings_visualizer.main:app"

[tool.poetry.dependencies]
python = "^3.9.0, !=3.9.7"
streamlit = ">=1.20.0"
typer = ">=0.7.0"
numpy = ">=1.20.0"
pandas = ">=2.0.0"
openai = ">=0.27.0"
python-dotenv = "^1.0.0"
scikit-learn = "^1.2.0"
plotly = ">=5.0.0"
matplotlib = ">=3.6.0"
langchain = ">=0.0.200"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"